--- a/app/index.html
+++ b/app/index.html
@@ -111,7 +111,6 @@
         </main>
     </div>
     
-    <!-- Merge View Modal -->
     <div id="merge-view-modal" class="merge-view-overlay hidden">
         <div class="merge-view-container">
             <header id="merge-view-header">
@@ -120,15 +119,15 @@
             </header>
             <div id="merge-view-controls" class="button-group">
                 <button class="btn btn-primary" id="column-operations-btn" title="開啟欄位顯示/隱藏/排序選單">欄位操作</button>
-                <!-- ▼▼▼ NEW BUTTON ▼▼▼ -->
                 <button class="btn btn-primary" id="toggle-source-col-btn" title="切換顯示/隱藏 來源檔案欄位">新增來源欄位</button>
-                <!-- ▲▲▲ NEW BUTTON ▲▲▲ -->
                 <button class="btn btn-info" id="edit-data-btn" title="啟用/停用表格內容編輯功能">編輯資料</button>
                 <button class="btn btn-success hidden" id="save-edits-btn" title="儲存您對表格所做的變更">儲存編輯</button>
                 <button class="btn btn-secondary hidden" id="cancel-edits-btn" title="放棄編輯並還原回儲存前的狀態">取消編輯</button>
                 <button class="btn btn-primary" id="add-new-row-btn" title="在表格最上方新增一筆空白資料列">新增資料列</button>
                 <button class="btn btn-primary" id="copy-selected-rows-btn" title="複製目前勾選的資料列，並新增到表格頂端">複製選取列</button>
                 <button class="btn btn-warning" id="toggle-total-row-btn" title="顯示或隱藏最下方的合計列">新增/移除合計列</button>
+                
+                <button class="btn btn-warning" id="invert-selection-merged-btn" title="反轉此表格中所有資料列的勾選狀態">反向選取</button>
                 <button class="btn btn-danger" id="delete-merged-rows-btn" title="刪除在此合併表格中勾選的資料列">刪除勾選列</button>
             </div>
 
@@ -143,12 +142,10 @@
             </div>
 
             <div id="merge-view-content">
-                <!-- Merged table will be rendered here -->
-            </div>
+                </div>
         </div>
     </div>
 
-    <!-- Column Operations Modal -->
     <div id="column-modal" class="modal-overlay hidden">
         <div class="modal-dialog">
             <div class="modal-header">
