--- a/app/index.html
+++ b/app/index.html
@@ -126,8 +126,9 @@
                 <button class="btn btn-primary" id="add-new-row-btn" title="在表格最上方新增一筆空白資料列">新增資料列</button>
                 <button class="btn btn-primary" id="copy-selected-rows-btn" title="複製目前勾選的資料列，並新增到表格頂端">複製選取列</button>
                 <button class="btn btn-warning" id="toggle-total-row-btn" title="顯示或隱藏最下方的合計列">新增/移除合計列</button>
-                
                 <button class="btn btn-warning" id="invert-selection-merged-btn" title="反轉此表格中所有資料列的勾選狀態">反向選取</button>
+                
+                <button class="btn btn-success" id="export-selected-merged-xlsx-btn" title="將此合併表格中勾選的資料列匯出為 XLSX">匯出選取列 (XLSX)</button>
                 <button class="btn btn-danger" id="delete-merged-rows-btn" title="刪除在此合併表格中勾選的資料列">刪除勾選列</button>
             </div>
 
