--- a/app/index.html
+++ b/app/index.html
@@ -128,6 +128,7 @@
                 <button class="btn btn-primary" id="copy-selected-rows-btn" title="複製目前勾選的資料列，並新增到表格頂端">複製選取列</button>
                 <button class="btn btn-warning" id="toggle-total-row-btn" title="顯示或隱藏最下方的合計列">新增/移除合計列</button>
                 <button class="btn btn-warning" id="invert-selection-merged-btn" title="反轉此表格中所有資料列的勾選狀態">反向選取</button>
+                <button class="btn btn-success" id="export-current-merged-xlsx-btn" title="將目前合併檢視中的 *所有可見* 資料列匯出為 XLSX">匯出此檢視 (XLSX)</button>
                 <button class="btn btn-success" id="export-selected-merged-xlsx-btn" title="將此合併表格中 *未被勾選* 的資料列匯出為 XLSX">匯出剩餘資料列 (XLSX)</button>
                 <button class="btn btn-danger" id="delete-merged-rows-btn" title="刪除在此合併表格中勾選的資料列">刪除勾選列</button>
             </div>
@@ -150,6 +151,7 @@
                     </div>
                 </div>
             </div>
+
             <div id="merge-view-column-ops" class="button-group" style="padding: 10px 20px; background-color: #f8f9fa; border-bottom: 1px solid #dee2e6; gap: 10px; align-items: center;">
                 <label for="column-select-ops" style="font-weight: 600; font-size: 0.95rem; color: #495057;">▶️ 依指定欄位勾選:</label>
                 <select id="column-select-ops" style="flex: 1; padding: 6px 8px; border: 2px solid #dee2e6; border-radius: 8px; font-size: 0.9rem; min-width: 150px;" title="選擇一個欄位以進行勾選操作">
