--- a/app/index.html
+++ b/app/index.html
@@ -69,9 +69,10 @@
                         <input type="text" id="search-input" placeholder="輸入關鍵字以篩選資料列..." title="即時篩選所有表格中的資料列">
                     </div>
                     <div class="control-group" id="select-by-keyword-group">
-                        <label>✅ 依關鍵字勾選 (主畫面)</label><label class="checkbox-label"><input type="checkbox" id="select-keyword-regex" title="使用正規表示式來進行關鍵字勾選"> 使用正規表示式</label>
+                        <label>✅ 依關鍵字勾選 (主畫面)</label>
                         <div class="input-with-checkbox-group">
                             <input type="text" id="select-keyword-input" placeholder="多關鍵字用空格(AND)或逗號(OR)分隔" title="輸入關鍵字以供下方按鈕勾選">                            
+                            <label class="checkbox-label"><input type="checkbox" id="select-keyword-regex" title="使用正規表示式來進行關鍵字勾選"> 使用正規表示式</label>
                         </div>
 
                     </div>
@@ -226,5 +227,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
