--- a/app/index.html
+++ b/app/index.html
@@ -148,9 +148,6 @@
                                 <input type="text" id="select-keyword-input-merged" placeholder="多關鍵字用空格(AND)或逗號(OR)分隔" title="輸入關鍵字以供下方按鈕勾選">
                                 <label class="checkbox-label"><input type="checkbox" id="select-keyword-regex-merged" title="使用正規表示式來進行關鍵字勾選"> 使用正規表示式</label>
                             </div>
-                            <div class="button-group" style="margin-top: 4px;">
-                                <button class="btn btn-primary" id="select-by-keyword-btn-merged" title="根據上方輸入的關鍵字勾選資料列">依關鍵字勾選</button>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -195,7 +192,7 @@
                     </div>
                     
                     <div class="filter-row execute-row">
-                        <button id="execute-complex-select-btn" class="btn btn-primary" style="margin-left: auto;">🚀 執行勾選</button>
+                        <button id="execute-filter-selection-btn" class="btn btn-primary" style="margin-left: auto;">🚀 執行篩選勾選</button>
                     </div>
                 </div>
             </div>
@@ -227,6 +224,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
