--- a/app/index.html
+++ b/app/index.html
@@ -135,7 +135,7 @@
                     <button class="btn btn-danger btn-sm" id="delete-merged-rows-btn" title="刪除在此合併表格中勾選的資料列">刪除勾選</button>
                 </div>
                 
-                <button id="toggle-toolbar-btn" class="btn btn-secondary btn-sm" title="收合/展開工具列">收合工具列</button>
+                <button id="toggle-toolbar-btn" class="btn-warning" title="收合/展開工具列">收合工具列</button>
                 <button id="close-merge-view-btn" class="close-btn" title="關閉合併檢視 (Esc)">&times;</button>
             </header>
 
@@ -224,6 +224,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
