--- a/app/index.html
+++ b/app/index.html
@@ -155,7 +155,7 @@
                         <div class="filter-section">
                             <label>條件 A：</label>
                             <select id="col-select-1" class="filter-select">
-                                <option value="">-- 選擇欄位 1 --</option>
+                                <option value="">-- 選擇欄位任一欄位 --</option>
                             </select>
                             <div class="radio-group" data-target="inputCriteria1">
                                 <label><input type="radio" name="criteria-1" value="empty" checked> 空值</label>
@@ -179,7 +179,7 @@
                         <div class="filter-section">
                             <label>條件 B：</label>
                             <select id="col-select-2" class="filter-select">
-                                <option value="">-- 選擇欄位 2 (選填) --</option>
+                                <option value="">-- 選擇任一欄位2(選填) --</option>
                             </select>
                             <div class="radio-group" data-target="inputCriteria2">
                                 <label><input type="radio" name="criteria-2" value="empty" checked> 空值</label>
@@ -229,5 +229,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
