--- a/app_project_a/index.html
+++ b/app_project_a/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>基金資料彙總報告產生器 (Project A)</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> 
+    <script src="scripts.js"></script>
 </head>
 <body>
 
@@ -146,4 +147,5 @@
     
     <script src="scripts.js"></script>
 </body>
+
 </html>
