--- a/app_project_a/index.html
+++ b/app_project_a/index.html
@@ -13,7 +13,7 @@
     <div id="app-container">
         <div class="app-header">
             <h1>📊 基金資料彙總報告產生器</h1>
-            <div class="version">Project A 模式：動態矩陣分析 v17.0 (含檢誤/復原功能)</div>
+            <div class="version">動態表格彙整(含檢誤/復原功能)</div>
             <div style="margin-top: 10px;">
                 <a href="help.html" target="_blank" class="btn btn-outline" style="color:white; border-color:white; text-decoration:none;">📖 開啟使用說明</a>
             </div>
@@ -149,3 +149,4 @@
 </body>
 
 </html>
+
