--- a/app_project_a/index.html
+++ b/app_project_a/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>基金資料彙總報告產生器 (Project A)</title>
+    <title>總態表格彙總器 (Project A)</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <link rel="stylesheet" href="styles.css"> 
     <script src="scripts.js"></script>
@@ -12,7 +12,7 @@
 
     <div id="app-container">
         <div class="app-header">
-            <h1>📊 基金資料彙總報告產生器</h1>
+            <h1>📊 動態表格彙總器</h1>
             <div class="version">動態表格彙整(含檢誤/復原功能)</div>
             <div style="margin-top: 10px;">
                 <a href="help.html" target="_blank" class="btn btn-outline" style="color:white; border-color:white; text-decoration:none;">📖 開啟使用說明</a>
@@ -149,4 +149,5 @@
 </body>
 
 </html>
+
 
